Fix stories with headlines not being aligned on mobile

--- a/app/assets/stylesheets/module/_story-list.scss
+++ b/app/assets/stylesheets/module/_story-list.scss
@@ -1,5 +1,11 @@
 .story-list {
   clear: both;
+  padding: 0 5px;
+
+  @include breakpoint($tablet) {
+    padding: 0;
+  }
+  
   a {
     display: block;
     padding: 15px 0 10px 0;
